<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:weightSum="10">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal|top"
                        android:fontFamily="@font/reemkufi_regular"
                        android:text="@string/app_header_bismillah"
                        android:textColor="@color/text_color"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"
                        >
                    </TextView>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true">
                        <com.github.clans.fab.FloatingActionMenu
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="top|end|right"
                            app:menu_colorNormal="@color/sura_card"
                            app:menu_colorPressed="@color/outer_card"
                            app:menu_fab_label="@string/title_activity_settings"
                            app:menu_fab_size="mini"
                            app:menu_icon="@drawable/ic_settings"
                            app:menu_showShadow="true"
                            android:layout_alignParentRight="true"
                            android:onClick="openSettings"
                            android:id="@+id/settingsAction"
                            >
                        </com.github.clans.fab.FloatingActionMenu>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentLeft="true">
                        <com.github.clans.fab.FloatingActionMenu
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="top|end|right"
                            app:menu_colorNormal="@color/sura_card"
                            app:menu_colorPressed="@color/outer_card"
                            app:menu_fab_label="@string/title_activity_settings"
                            app:menu_fab_size="mini"
                            app:menu_icon="@drawable/ic_info"
                            app:menu_showShadow="true"
                            android:id="@+id/aboutPage"
                            android:layout_alignParentRight="true"
                            >
                        </com.github.clans.fab.FloatingActionMenu>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:layout_centerInParent="true"
            android:id="@+id/categoryGrid">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1.3"
                android:layout_rowWeight="1.3"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/card1"
                android:tag="@string/tag1"
                app:cardBackgroundColor="@color/sura_card"
                android:onClick="openCategoryView"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card1"
                        android:textSize="25sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_bold"
                        android:textAlignment="center"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card6"
                        android:textSize="12sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_regular"
                        android:textAlignment="center"
                        android:id="@+id/txtCategory1"
                        >
                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1.3"
                android:layout_rowWeight="1.3"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/sura_card"
                android:tag="@string/tag2"
                android:onClick="openCategoryView"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card2"
                        android:textSize="25sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_bold"
                        android:textAlignment="center"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card6"
                        android:textSize="12sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_regular"
                        android:textAlignment="center"
                        android:id="@+id/txtCategory2"
                        >
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1.3"
                android:layout_rowWeight="1.3"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/sura_card"
                android:tag="@string/tag3"
                android:onClick="openCategoryView"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card3"
                        android:textSize="25sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_bold"
                        android:textAlignment="center"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card6"
                        android:textSize="12sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_regular"
                        android:textAlignment="center"
                        android:id="@+id/txtCategory3"
                        >
                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1.3"
                android:layout_rowWeight="1.3"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/sura_card"
                android:tag="@string/tag4"
                android:onClick="openCategoryView"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card4"
                        android:textSize="25sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_bold"
                        android:textAlignment="center"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card6"
                        android:textSize="12sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_regular"
                        android:textAlignment="center"
                        android:id="@+id/txtCategory4"
                        >
                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1.3"
                android:layout_rowWeight="1.3"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/card5"
                app:cardBackgroundColor="@color/sura_card"
                android:tag="@string/tag5"
                android:onClick="openCategoryView"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical|center"
                        android:text="@string/card5"
                        android:textSize="25sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_bold"
                        android:textAlignment="center"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card6"
                        android:textSize="12sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_regular"
                        android:textAlignment="center"
                        android:id="@+id/txtCategory5"
                        >
                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1.3"
                android:layout_rowWeight="1.3"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/card6"
                app:cardBackgroundColor="@color/sura_card"
                android:tag="@string/tag6"
                android:onClick="openCategoryView"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card6"
                        android:textSize="25sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_bold"
                        android:textAlignment="center"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card6"
                        android:textSize="12sp"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/amiri_regular"
                        android:textAlignment="center"
                        android:id="@+id/txtCategory6"
                        >
                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_centerInParent="true"
            android:fontFamily="@font/reemkufi_regular"
            android:text="@string/app_footer"
            >
        </TextView>
    </RelativeLayout>
</LinearLayout>

